--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://huggingface.co/spaces/Kodwo11/Sentiment_Analysis">Sentiment Analysis<br />
+										<h2><a href="https://huggingface.co/spaces/Kodwo11/Sentiment_Analysis">Sentiment Analysis  Using pre-trained modes from huggingface<br />
 											</a></h2>
 									</header>
 									<a href="https://huggingface.co/spaces/Kodwo11/Sentiment_Analysis" class="image fit"><img src="images/sentimentanalysishotelgeneric-2048x803-1.jpg" alt="" /></a>
