--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								<article>
 									<header>
 							
-										<h2><a href="https://app.powerbi.com/links/d7cMwWPKRm?ctid=4487b52f-f118-4830-b49d-3c298cb71075&pbi_source=linkShare">Creating PowerBi Dashboard on a 2019 transactional data <br />
+										<h2><a href="https://app.powerbi.com/links/d7cMwWPKRm?ctid=4487b52f-f118-4830-b49d-3c298cb71075&pbi_source=linkShare">Creating a PowerBi Dashboard on a 2019 transactional data <br />
 										</a></h2>
 									</header>
 									<a href="https://app.powerbi.com/links/d7cMwWPKRm?ctid=4487b52f-f118-4830-b49d-3c298cb71075&pbi_source=linkShare" class="image fit"><img src="images/transactional-data-5551347-4619100.png" alt="" /></a>
@@ -150,7 +150,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://huggingface.co/spaces/Kodwo11/Sentiment_Analysis">Sentiment Analysis  Using pre-trained modes from huggingface<br />
+										<h2><a href="https://huggingface.co/spaces/Kodwo11/Sentiment_Analysis">Sentiment Analysis  Using pre-trained models from huggingface<br />
 											</a></h2>
 									</header>
 									<a href="https://huggingface.co/spaces/Kodwo11/Sentiment_Analysis" class="image fit"><img src="images/sentimentanalysishotelgeneric-2048x803-1.jpg" alt="" /></a>
