--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Kodwo Amissah Portfolio</title>
+		<title>Kodwo Amissah-Mensah's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Data Dynamo's Portfolio<br />
+						<h1>Kodwo Amissah-Mensah's Portfolio<br />
 						</h1>
 						<p>A Data Analyst skilled in Data Cleaning,Excel,Powerbi,Python,Machine Learning and Sql <a href="https://github.com/KodwoAmissah">@kodwo</a> 
 						<ul class="actions">
