--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://public.tableau.com/app/profile/data.dynamo4838/viz/Hrdashboard_17097658536780/Dashboard1?publish=yes">Tableau Project<br />
+										<h2><a href="https://public.tableau.com/app/profile/data.dynamo4838/vizzes">Tableau Project<br />
 											</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/data.dynamo4838/viz/Hrdashboard_17097658536780/Dashboard1?publish=yes" class="image fit"><img src="images/TABLEAU_SOFTWARE_LOGOjpg_Logo.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/data.dynamo4838/vizzes" class="image fit"><img src="images/TABLEAU_SOFTWARE_LOGOjpg_Logo.jpg" alt="" /></a>
 									<p>This holds my tableau dashboards</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/data.dynamo4838/viz/Hrdashboard_17097658536780/Dashboard1?publish=yes" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/data.dynamo4838/vizzes" class="button">View Project</a></li>
 
 								</ul>
 								</article>
