--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
 								</article>
 								<article>
 									<header>
+										</ul>
+										</article>
+										<article>
+											<header>
+												<h2><a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction">Churn prediction app using gradio and deployed o huggingface<br />
+													</a></h2>
+											</header>
+											<a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction" class="image fit"><img src="images/Customer-Churn.png" alt="" /></a>
+											<p>In this project, i was able to create an app using gardio</p>
+											<ul class="actions special">
+												<li><a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction" class="button">View App</a></li>
+												</section>
 							
 										<h2><a href="https://app.powerbi.com/links/d7cMwWPKRm?ctid=4487b52f-f118-4830-b49d-3c298cb71075&pbi_source=linkShare">Creating a PowerBi Dashboard on a 2019 transactional data <br />
 										</a></h2>
