--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										</article>
 										<article>
 											<header>
-												<h2><a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction">Churn prediction app using gradio and deployed o huggingface<br />
+												<h2><a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction">Churn prediction app using gradio and deployed on huggingface<br />
 													</a></h2>
 											</header>
 											<a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction" class="image fit"><img src="images/Customer-Churn.png" alt="" /></a>
@@ -126,13 +126,28 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/KodwoAmissah/Time-Series-Forecasting-LP3-project-/blob/main/Code/Notebooks/project.ipynb">Time Series Forecasting<br />
+										<h2><a href="https://github.com/KodwoAmissah/Time-Series-Forecasting-LP3-project-/blob/main/Code/Notebooks/project.ipynb">Using Machine Learning for time Series Forecasting<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/KodwoAmissah/Time-Series-Forecasting-LP3-project-/blob/main/Code/Notebooks/project.ipynb" class="image fit"><img src="images/Screenshot-2023-10-11-at-7.16.17-PM.png" alt="" /></a>
 									<p>In this project,i developed a robust and accurate time series forecasting model that predicts store sales for a wide range of products across Favorita stores,by leveraging historical sales data and relevant supplementary information.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KodwoAmissah/Time-Series-Forecasting-LP3-project-/blob/main/Code/Notebooks/project.ipynb" class="button">View Project</a></li>
+
+									</ul>
+										</article>
+										<article>
+											<header>
+										
+												<h2><a href="https://timeseriesprediction.streamlit.app/">Using Streamlit to deploy a Time Series App<br />
+													</a></h2>
+											</header>
+											<a href="https://timeseriesprediction.streamlit.app/" class="image fit"><img src="images/Screenshot-2023-10-11-at-7.16.17-PM.png" alt="" /></a>
+											<p>In this project,i created and deployed a Time Series App Using Streamlit</p>
+											<ul class="actions special">
+												<li><a href="https://timeseriesprediction.streamlit.app/" class="button">View Project</a></li>
+
+
 									</ul>
 								</article>
 								<article>
