--- a/index.html
+++ b/index.html
@@ -61,6 +61,31 @@
 
 			<!-- Posts -->
 			<section class="posts">
+				<article>
+					<header>
+						<h2><a href="https://github.com/KodwoAmissah/Churn-Analysis-LP2-Project-/blob/main/Code/Notebook/project.ipynb">Using Machine Learning to Determine The Probability Of a Customer Churning<br />
+							</a></h2>
+					</header>
+					<a href="https://github.com/KodwoAmissah/Churn-Analysis-LP2-Project-/blob/main/Code/Notebook/project.ipynb" class="image fit"><img src="images/Customer-Churn.png" alt="" /></a>
+					<p>In this project i used various algorithms to determine the likelihood of a customer churning</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/KodwoAmissah/Churn-Analysis-LP2-Project-/blob/main/Code/Notebook/project.ipynb" class="button">View Project</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						</ul>
+				</article>
+				<article>
+					<header>
+						<h2><a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction">Churn prediction app using gradio and deployed on huggingface<br />
+							</a></h2>
+					</header>
+					<a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction" class="image fit"><img src="images/Customer-Churn.png" alt="" /></a>
+					<p>In this project, i was able to create an app using gardio</p>
+					<ul class="actions special">
+						<li><a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction" class="button">View App</a></li>
+						</section>
 
 				<article>
 					<header>
@@ -159,7 +184,7 @@
 		<footer id="footer">
 			<section>
 				<h3>Phone</h3>
-				<p><a href="#">(056) 041-0601</a></p>
+				<p><a href="#">+233 56 041-0601</a></p>
 			</section>
 			<section>
 				<h3>Email</h3>
