--- a/index.html
+++ b/index.html
@@ -61,37 +61,32 @@
 
 			<!-- Posts -->
 			<section class="posts">
+
 				<article>
 					<header>
-						<h2><a href="https://github.com/KodwoAmissah/Churn-Analysis-LP2-Project-/blob/main/Code/Notebook/project.ipynb">Using Machine Learning to Determine The Probability Of a Customer Churning<br />
-							</a></h2>
+						<h2><a href="https://github.com/KodwoAmissah/Churn-Analysis-LP2-Project-/blob/main/Code/Notebook/project.ipynb">Using Machine Learning to Determine the Probability of a Customer Churning</a></h2>
 					</header>
-					<a href="https://github.com/KodwoAmissah/Churn-Analysis-LP2-Project-/blob/main/Code/Notebook/project.ipynb" class="image fit"><img src="images/Customer-Churn.png" alt="" /></a>
-					<p>In this project i used various algorithms to determine the likelihood of a customer churning</p>
+					<a href="https://github.com/KodwoAmissah/Churn-Analysis-LP2-Project-/blob/main/Code/Notebook/project.ipynb" class="image fit"><img src="images/Customer-Churn.png" alt="Customer churn machine learning project" /></a>
+					<p>In this project, I used various algorithms to determine the likelihood of a customer churning.</p>
 					<ul class="actions special">
 						<li><a href="https://github.com/KodwoAmissah/Churn-Analysis-LP2-Project-/blob/main/Code/Notebook/project.ipynb" class="button">View Project</a></li>
 					</ul>
 				</article>
-				<article>
-					<header>
-						</ul>
-				</article>
-				<article>
-					<header>
-						<h2><a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction">Churn prediction app using gradio and deployed on huggingface<br />
-							</a></h2>
-					</header>
-					<a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction" class="image fit"><img src="images/Customer-Churn.png" alt="" /></a>
-					<p>In this project, i was able to create an app using gardio</p>
-					<ul class="actions special">
-						<li><a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction" class="button">View App</a></li>
-						</section>
 
 				<article>
 					<header>
-						<h2><a href="https://app.powerbi.com/links/d7cMwWPKRm?ctid=4487b52f-f118-4830-b49d-3c298cb71075&pbi_source=linkShare">
-								Creating a Power BI Dashboard on 2019 Transactional Data
-							</a></h2>
+						<h2><a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction">Churn Prediction App using Gradio on Hugging Face</a></h2>
+					</header>
+					<a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction" class="image fit"><img src="images/Customer-Churn.png" alt="Gradio churn prediction app" /></a>
+					<p>In this project, I created an interactive app using Gradio to predict customer churn.</p>
+					<ul class="actions special">
+						<li><a href="https://huggingface.co/spaces/Kodwo11/Churn_prediction" class="button">View App</a></li>
+					</ul>
+				</article>
+
+				<article>
+					<header>
+						<h2><a href="https://app.powerbi.com/links/d7cMwWPKRm?ctid=4487b52f-f118-4830-b49d-3c298cb71075&pbi_source=linkShare">Creating a Power BI Dashboard on 2019 Transactional Data</a></h2>
 					</header>
 					<a href="https://app.powerbi.com/links/d7cMwWPKRm?ctid=4487b52f-f118-4830-b49d-3c298cb71075&pbi_source=linkShare" class="image fit"><img src="images/transactional-data-5551347-4619100.png" alt="Power BI dashboard project" /></a>
 					<p>In this project, I used Power BI to generate insights on a 2019 transactional dataset.</p>
@@ -104,7 +99,7 @@
 					<header>
 						<h2><a href="https://github.com/KodwoAmissah/Movie-Correlation/blob/main/Movie%20Correlation.ipynb">Movie Correlation Using Python</a></h2>
 					</header>
-					<a href="https://github.com/KodwoAmissah/Movie-Correlation/blob/main/Movie%20Correlation.ipynb" class="image fit"><img src="images/moviesss.jpeg" alt="Movie data correlation project" /></a>
+					<a href="https://github.com/KodwoAmissah/Movie-Correlation/blob/main/Movie%20Correlation.ipynb" class="image fit"><img src="images/moviesss.jpeg" alt="Movie correlation analysis" /></a>
 					<p>In this project, we explored variables that affect gross revenue from movies.</p>
 					<ul class="actions special">
 						<li><a href="https://github.com/KodwoAmissah/Movie-Correlation/blob/main/Movie%20Correlation.ipynb" class="button">View Project</a></li>
@@ -115,7 +110,7 @@
 					<header>
 						<h2><a href="https://github.com/KodwoAmissah/Cleaning-of-Housing-data-Using-Sql/blob/main/house%20cleaning%20data.sql">Data Cleaning of Nashville Housing Dataset Using SQL</a></h2>
 					</header>
-					<a href="https://github.com/KodwoAmissah/Cleaning-of-Housing-data-Using-Sql/blob/main/house%20cleaning%20data.sql" class="image fit"><img src="images/housing.jpg" alt="Nashville housing data cleaning" /></a>
+					<a href="https://github.com/KodwoAmissah/Cleaning-of-Housing-data-Using-Sql/blob/main/house%20cleaning%20data.sql" class="image fit"><img src="images/housing.jpg" alt="SQL housing data cleaning" /></a>
 					<p>In this project, I cleaned a housing dataset using SQL to make it better for analysis.</p>
 					<ul class="actions special">
 						<li><a href="https://github.com/KodwoAmissah/Cleaning-of-Housing-data-Using-Sql/blob/main/house%20cleaning%20data.sql" class="button">View Project</a></li>
@@ -126,7 +121,7 @@
 					<header>
 						<h2><a href="https://github.com/KodwoAmissah/Time-Series-Forecasting-LP3-project-/blob/main/Code/Notebooks/project.ipynb">Time Series Forecasting Using Machine Learning</a></h2>
 					</header>
-					<a href="https://github.com/KodwoAmissah/Time-Series-Forecasting-LP3-project-/blob/main/Code/Notebooks/project.ipynb" class="image fit"><img src="images/Screenshot-2023-10-11-at-7.16.17-PM.png" alt="Time series forecasting ML project" /></a>
+					<a href="https://github.com/KodwoAmissah/Time-Series-Forecasting-LP3-project-/blob/main/Code/Notebooks/project.ipynb" class="image fit"><img src="images/Screenshot-2023-10-11-at-7.16.17-PM.png" alt="Time series forecasting" /></a>
 					<p>I developed a forecasting model that predicts store sales across Favorita stores using historical sales data and additional features.</p>
 					<ul class="actions special">
 						<li><a href="https://github.com/KodwoAmissah/Time-Series-Forecasting-LP3-project-/blob/main/Code/Notebooks/project.ipynb" class="button">View Project</a></li>
@@ -148,7 +143,7 @@
 					<header>
 						<h2><a href="https://kodwo11-sepsisapp.hf.space/docs">Sepsis Modelling with FastAPI</a></h2>
 					</header>
-					<a href="https://kodwo11-sepsisapp.hf.space/docs" class="image fit"><img src="images/logo-teal.png" alt="FastAPI sepsis prediction app" /></a>
+					<a href="https://kodwo11-sepsisapp.hf.space/docs" class="image fit"><img src="images/logo-teal.png" alt="FastAPI sepsis prediction" /></a>
 					<p>This project involves a FastAPI web app that predicts if a patient has sepsis based on medical attributes.</p>
 					<ul class="actions special">
 						<li><a href="https://kodwo11-sepsisapp.hf.space/docs" class="button">View App</a></li>
@@ -170,7 +165,7 @@
 					<header>
 						<h2><a href="https://huggingface.co/spaces/Kodwo11/Sentiment_Analysis">Sentiment Analysis with Hugging Face Transformers</a></h2>
 					</header>
-					<a href="https://huggingface.co/spaces/Kodwo11/Sentiment_Analysis" class="image fit"><img src="images/sentimentanalysishotelgeneric-2048x803-1.jpg" alt="Hugging Face sentiment analysis app" /></a>
+					<a href="https://huggingface.co/spaces/Kodwo11/Sentiment_Analysis" class="image fit"><img src="images/sentimentanalysishotelgeneric-2048x803-1.jpg" alt="Sentiment analysis hugging face" /></a>
 					<p>My team fine-tuned a pre-trained model to classify Twitter post sentiments as positive, neutral, or negative.</p>
 					<ul class="actions special">
 						<li><a href="https://huggingface.co/spaces/Kodwo11/Sentiment_Analysis" class="button">View App</a></li>
